# inverspyctrometry

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/database/: characterizations.json  config.json  datasets.json  experiments.json  interferometers.json  inversion_protocols.json  noise_levels.json
notebooks/: condition_number.ipynb  fabry-perot.ipynb  load_config.ipynb  sampling.ipynb  simulated_experiments.ipynb  transfer_matrix.ipynb
src/common_utils/: custom_vars.py  function_generator.py  interferogram.py  light_wave.py  transmittance_response.py  utils.py
src/database/: characterizations.py  database.py  datasets.py  experiments.py  interferometers.py  inversion_protocols.py  noise_levels.py
src/demo/: convert_units.py  demo_direct_model.py  demo_inverse_model.py  demo_simulated_snr.py  direct_model.py  haar_reconstruction_new.py  infinity_wave_order.py  inverse_model.py  invert_loris_verhoeven.py  load_characterization.py  load_configuration.py  load_dataset.py  load_dataset_shine.py  load_datasets.py  load_interferometers.py  load_inversion_protocol.py  sampling.py
src/demo/function_generator/: cosine.py  dirac.py  gaussian.py  lorentzian.py  voigt.py
src/demo/misc/: inverse_model.py  (+1 more)
src/direct_model/: characterization.py  interferometer.py
src/interface/: configuration.py
src/inverse_model/: analytical_inverter.py  inverspectrometer.py  loris_verhoeven_utils.py  operators.py  protocols.py
src/loaders/: transmittance_response.py
src/outputs/: resolver.py  serialize.py  visualization.py
src/tests/: context.py
(+91 files in other folders)
