[tool.poetry]
name = "inverspyctrometry"
version = "0.1.0"
description = ""
authors = ["Mohamad Jouni <33843331+mhmdjouni@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
scipy = "^1.11.4"
scikit-learn = "^1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
