[tool.poetry]
name = "inverspyctrometry"
version = "0.1.0"
description = "Reconstruction of Spectra from Interferograms in Fourier Transform Spectroscopy"
authors = ["Mohamad Jouni <33843331+mhmdjouni@users.noreply.github.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/mhmdjouni/inverspyctrometry"
keywords = [
    "Fourier Transform Spectroscopy",
    "Inverse problems",
    "Interferometry",
    "Spectrum reconstruction"
]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
scipy = "^1.11.4"
scikit-learn = "^1.4.0"
pydantic = "^2.5.3"
omegaconf = "^2.3.0"
pint = "^0.23"
beautifulsoup4 = "^4.12.3"
spectral = "^0.23.1"
lxml = "^5.1.0"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
